--- a/elements.html
+++ b/elements.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Resume</a></li>
-							<li class="active"><a href="elements.html"> Reference</a></li>
+							<li class="active"><a href="elements.html"> References</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://x.com/Adexwunmite1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
