--- a/elements.html
+++ b/elements.html
@@ -46,11 +46,20 @@
 									<h1>My<br />
 									Resume</h1>
 								</header>
-
 								<!-- Text stuff -->
-									<h2> <center> Ajijola Ololade Adewunmi </center> </h2>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+									
+								<h2> <center> Ajijola Ololade Adewunmi </center> </h2>
+									!**Introduction**
+
+Over the years, I have honed my abilities in programming languages such as Python, R, SQL, and JavaScript, while also working with modern data tools like Tableau, Power BI, and Apache Spark. I am experienced in all stages of the software development lifecycle, from gathering requirements and writing efficient code to deploying user-friendly applications. 
+
+This portfolio showcases a collection of my projects, each reflecting my dedication to clean code, continuous learning, and a user-centric approach to both data analysis and software development. I look forward to connecting and discussing how my skills can contribute to innovative solutions and your organization’s success.!
+								
+									<p>Welcome to my<b>portfolio!</b>I am a passionate and results-driven <strong>Data Analyst and Software Developer</strong>.</b>
+									with a strong foundation in transforming complex data into actionable insights and building innovative software solutions.</b>
+									With a blend of <strong>technical expertise and problem-solving skills</strong>, I specialize in data analysis, machine learning,</section>b>
+									and full-stack development to empower organizations with data-driven decisions and scalable applications. 
+
 									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>.
 									Finally, this is a <a href="#">link</a>.</p>
 									<hr />
