--- a/elements.html
+++ b/elements.html
@@ -52,10 +52,10 @@
 									<center>**Introduction**</center></b>
 
 								
-									<p>Welcome to my<b> portfolio!</b> I am a passionate and results-driven <strong>Data Analyst and Software Developer</strong>.</b>
+									<p> Welcome to my<b> portfolio!</b> I am a passionate and results-driven <strong>Data Analyst and Software Developer</strong>.</b>
 									with a strong foundation in transforming complex data into actionable insights and building innovative software solutions.</b>
 									With a blend of <strong>technical expertise and problem-solving skills</strong>, I specialize in data analysis, machine learning,</b>
-									and full-stack development to empower organizations with data-driven decisions and scalable applications. 
+									and full-stack development to empower organizations with data-driven decisions and scalable applications. </p>
 
 									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>.
 									Finally, this is a <a href="#">link</a>.</p>
