--- a/elements.html
+++ b/elements.html
@@ -57,14 +57,14 @@
 									With a blend of <strong>technical expertise and problem-solving skills</strong>, I specialize in data analysis, machine learning,</b>
 									and full-stack development to empower organizations with data-driven decisions and scalable applications. </p>
 
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>.
-									Finally, this is a <a href="#">link</a>.</p>
+									This is <u> My Portfolio </u> and this is code: <code>for (;;) { ... }</code>.
+									Finally, this is a <a href="#">link for my Projects work</a>.</p>
 									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
+									<h2><u>RESEARCH INTEREST</u></h2>
+									*<h3>Artificial Intelligence</h3>
+									*<h3>Machine Language</h3>
+									*<h3>Database Management</h3>
+									*<h3>Cybersecurity</h3>
 									<hr />
 									<header>
 										<h2>Heading with a Subtitle</h2>
