--- a/elements.html
+++ b/elements.html
@@ -62,27 +62,22 @@
 									<hr />
 									<h2><u>RESEARCH INTEREST</u></h2>
 									*<h3>Artificial Intelligence</h3>
-									*<h3>Machine Language</h3>
+									*<h3>Machine Learning</h3>
 									*<h3>Database Management</h3>
 									*<h3>Cybersecurity</h3>
 									<hr />
 									<header>
-										<h2>Heading with a Subtitle</h2>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+										<h2>EDUCATION </h2>
+										<p><b>BSc University of Ado- Ekiti, Nigeria, Computer science</b> </p>
 									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+									<p>Bachelors of Science, Computer Science.</p>
 									<header>
 										<h3>Heading with a Subtitle</h3>
 										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
 									</header>
 									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 									<header>
-										<h4>Heading with a Subtitle</h4>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
-									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-
-									<hr />
+										
 
 								<!-- Lists -->
 									<h2>Lists</h2>
