--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									</a></h2>
 									<p>In this project we inserted data of people, workers in sql server  </p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/New1.jpg" alt="Dara Cleaning" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">view project</a></li>
 								</ul>
