--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Ololade the Analyst<br />
-						Portfolio</h1>
-						<p>Data analyst with great hands on power bi, python, sql, v-basic  <a href="https://twitter.com/Adexwunmite1">@Adexwunmite1</a></p>
+						<h2>Ololade</b>
+						the Analyst and Software Developer<br />
+						Portfolio</h2>
+						<p>Data analyst with great hands on power bi, python, sql, v-basic,</b>
+						Software:- VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word,</br>
+						<a href="https://twitter.com/Adexwunmite1">@Adexwunmite1</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -69,10 +72,10 @@
 								<article>
 									<header>
 									
-										<h2><a href="#">Data exploration ins SQL<br />
+										<h2><a href="#">Data exploration in SQL<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/New2.png" alt=" visually and statistically summarizing, exploring" /></a>
 									<p>Data exploration of basketball teams in Sql server </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View project</a></li>
