--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								<article	>
 									<header>
 									
-										<h2><a href="#">Creating a train ticketing system<br />
+										<h2><a href="#">Created a train ticketing system<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
@@ -99,7 +99,7 @@
 										<h2><a href="#">Creating a data represenation using power bi <br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/New3.png" alt="" /></a>
 									<p>Analysis raw data, then arranging and representing them on the table format using power bi analytic tool.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">view porject</a></li>
