--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
+				<img src="Pass.png" alt="Passport pic">
 					<div id="intro">
 						<h2>Ololade</b>
 						the Analyst and Software Developer<br />
 						Portfolio</h2>
-						<p>Data analyst with great hands on power bi, python, sql, v-basic,</b>
+						<p>Data analyst with great hands on power bi, python, sql, v-basic, </br>
 						Software:- VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word,</br>
 						<a href="https://twitter.com/Adexwunmite1">@Adexwunmite1</a></p>
 						<ul class="actions">
