--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-				<img src="Pass.PNG" alt="Passport pic"style="width:200px">
+				<img src="Images/Pass.PNG" alt="Passport pic"style="width:200px">
 					<div id="intro">
 						<h2>Ololade</b>
 						the Analyst and Software Developer<br />
