--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-				<img src="Images/Pass.PNG" alt="Passport pic"style="width:200px">
+				<img src="Images/Pass1.png" alt="Passport pic"style="width:200px">
 					<div id="intro">
 						<h2>Ololade</b>
 						the Analyst and Software Developer<br />
@@ -62,7 +62,7 @@
 									</a></h2>
 									<p>In this project we inserted data of people, workers in sql server  </p>
 								</header>
-								<a href="#" class="image main"><img src="images/New1.png" alt="Dara Cleaning" /></a>
+								<a href="#" class="image main"><img src="images/New1.png" alt="Data Cleaning" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">view project</a></li>
 								</ul>
