--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-				<img src="Images/Pass1.png" alt="Passport pic" style="width:200px">
-				<img src="images/New1.png" alt="Data Cleaning" />
+				<img src="Images/Pass1.png" alt="Passport pic" style="width:200px"/>
+				
 					<div id="intro">
 						<h2>Ololade</b>
 						the Analyst and Software Developer<br />
