--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 -->
 <html>
 	<head>
+		<style>
+img {
+  border-radius: 50%;
+}
+</style>
 		<title>Ololade The Analyst portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
