--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
 -->
 <html>
 	<head>
-		<style>
-img {
-  border-radius: 50%;
-}
-</style>
 		<title>Ololade The Analyst portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -23,7 +18,7 @@ img {
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-				<img src="Images/Pass1.png" alt="Passport pic" style="width:200px"/>
+				<img src="images/Pass1.png" alt="Passport pic" style="width:200px"/>
 				
 					<div id="intro">
 						<h2>Ololade</b>
