--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">My home</a></li>
-							<li><a href="generic.html"></a>My contact</li>
-							<li><a href="elements.html">My Resume </a></li>
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="generic.html">References</a></li>
+							<li><a href="elements.html">Resume </a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/Adexwunmite1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
