--- a/elements.html
+++ b/elements.html
@@ -68,12 +68,15 @@
 									<hr />
 									<header>
 										<h2>EDUCATION </h2>
-										<p><b>BSc University of Ado- Ekiti, Nigeria, Computer science</b> </p>
+										<p><b>Ekiti state university, Faculty of science</b> </p>
+										Bachelors of Science, Computer Science</br>
+										
 									</header>
-									<p>Bachelors of Science, Computer Science.</p>
+									<p>Emphasis, Database model.</p>
 									<header>
-										<h3>Heading with a Subtitle</h3>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+										<h2>RELEVANT COURSEWORK </h2>
+										<p>Software Engineering, Object-Oriented Programming, Database Management,</br>
+										Compilers Construction, Simulation and Modeling, Optimization Techniques, Artificial Intelligence</p>
 									</header>
 									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 									<header>
