--- a/elements.html
+++ b/elements.html
@@ -67,21 +67,33 @@
 									*<h3>Cybersecurity</h3>
 									<hr />
 									<header>
-										<h2>EDUCATION </h2>
-										<p><b>Ekiti state university, Faculty of science</b> </p>
+										<h2><u>EDUCATION</u> </h2>
+										<p><b>Ekiti state university, Faculty of science</b></p>
 										Bachelors of Science, Computer Science</br>
 										
 									</header>
 									<p>Emphasis, Database model.</p>
 									<header>
-										<h2>RELEVANT COURSEWORK </h2>
+										<h2><u>RELEVANT COURSEWORK</u></h2>
 										<p>Software Engineering, Object-Oriented Programming, Database Management,</br>
 										Compilers Construction, Simulation and Modeling, Optimization Techniques, Artificial Intelligence</p>
 									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 									<header>
-										
-
+										<h2><u>Technical skills</u></h2>
+										<p>Programming Languages: - Visual Basic, Python, SQL, C++, HTML, Java, Django</br>
+										   Operating Systems: - Windows, Linux, Mac, Unix </br>
+										   Database: - SQL Server, MS Access, Oracle, PostgreSQL, SQLite</br>
+										   Software:-VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word, Zoom
+										   Version Control:- Git, GitHub, GitLab
+										</p>	
+									</header>
+									<header>
+										<h2><u>RELEVANT EXPERIENCE </u></h2>
+										<p><b>Adexwunmite Technology</b>
+										<Data Analyst and Software Developer
+										</p>
+											<p align="right">Remote</p>
+									</header>														
 								<!-- Lists -->
 									<h2>Lists</h2>
 									<div class="row">
