--- a/elements.html
+++ b/elements.html
@@ -83,16 +83,16 @@
 										<p>Programming Languages: - Visual Basic, Python, SQL, C++, HTML, Java, Django</br>
 										   Operating Systems: - Windows, Linux, Mac, Unix </br>
 										   Database: - SQL Server, MS Access, Oracle, PostgreSQL, SQLite</br>
-										   Software:-VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word, Zoom
+										   Software:-VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word, Zoom</br>
 										   Version Control:- Git, GitHub, GitLab
 										</p>	
 									</header>
 									<header>
 										<h2><u>RELEVANT EXPERIENCE </u></h2>
-										<p><b>Adexwunmite Technology</b>
-										<Data Analyst and Software Developer
+										<p><b>Adexwunmite Technology</b>   <align="right">Remote </align>
+										 Data Analyst and Software Developer
 										</p>
-											<p align="right">Remote</p>
+											
 									</header>														
 								<!-- Lists -->
 									<h2>Lists</h2>
