--- a/elements.html
+++ b/elements.html
@@ -80,12 +80,12 @@
 									</header>
 									<header>
 										<h2><u>Technical skills</u></h2>
-										<p>Programming Languages: - Visual Basic, Python, SQL, C++, HTML, Java, Django</br>
-										   Operating Systems: - Windows, Linux, Mac, Unix </br>
+										Programming Languages:- Visual Basic, Python, SQL, C++, HTML, Java, Django</br>
+										   Operating Systems:- Windows, Linux, Mac, Unix </br>
 										   Database: - SQL Server, MS Access, Oracle, PostgreSQL, SQLite</br>
 										   Software:-VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word, Zoom</br>
 										   Version Control:- Git, GitHub, GitLab
-										</p>	
+											
 									</header>
 									<header>
 										<h2><u>RELEVANT EXPERIENCE </u></h2>
