--- a/elements.html
+++ b/elements.html
@@ -75,21 +75,21 @@
 									<p>Emphasis, Database model.</p>
 									<header>
 										<h2><u>RELEVANT COURSEWORK</u></h2>
-										<p>Software Engineering, Object-Oriented Programming, Database Management,</br>
-										Compilers Construction, Simulation and Modeling, Optimization Techniques, Artificial Intelligence</p>
+										<p>Software Engineering, Object-Oriented Programming, Database Management,Compilers Construction,</br>
+										 Simulation and Modeling, Optimization Techniques, Artificial Intelligence</p>
 									</header>
 									<header>
 										<h2><u>Technical skills</u></h2>
-										Programming Languages:- Visual Basic, Python, SQL, C++, HTML, Java, Django</br>
-										   Operating Systems:- Windows, Linux, Mac, Unix </br>
-										   Database: - SQL Server, MS Access, Oracle, PostgreSQL, SQLite</br>
-										   Software:-VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word, Zoom</br>
+										   Programming Languages:- Visual Basic, Python, SQL, C++, HTML, Java, Django.</br>
+										   Operating Systems:- Windows, Linux, Mac, Unix. </br>
+										   Database: - SQL Server, MS Access, Oracle, PostgreSQL, SQLite. </br>
+										   Software:-VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word,Zoom. </br>
 										   Version Control:- Git, GitHub, GitLab
 											
 									</header>
 									<header>
 										<h2><u>RELEVANT EXPERIENCE </u></h2>
-										<p><b>Adexwunmite Technology</b>   <align="right">Remote </align>
+										<p><b>Adexwunmite Technology</b>   <align="right"> Remote </align> </br>
 										 Data Analyst and Software Developer
 										</p>
 											
