--- a/elements.html
+++ b/elements.html
@@ -70,20 +70,19 @@
 										<h2><u>EDUCATION</u> </h2>
 										<p><b>Ekiti state university, Faculty of science</b></p>
 										Bachelors of Science, Computer Science</br>
-										
+										<p>Emphasis, Database model.</p>
 									</header>
-									<p>Emphasis, Database model.</p>
 									<header>
 										<h2><u>RELEVANT COURSEWORK</u></h2>
-										<p>Software Engineering, Object-Oriented Programming, Database Management,Compilers Construction,</br>
+										<p>Software Engineering, Object-Oriented Programming, Database Management,Compilers Construction,<br/>
 										 Simulation and Modeling, Optimization Techniques, Artificial Intelligence</p>
 									</header>
 									<header>
 										<h2><u>Technical skills</u></h2>
-										   Programming Languages:- Visual Basic, Python, SQL, C++, HTML, Java, Django.</br>
-										   Operating Systems:- Windows, Linux, Mac, Unix. </br>
-										   Database: - SQL Server, MS Access, Oracle, PostgreSQL, SQLite. </br>
-										   Software:-VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word,Zoom. </br>
+										   Programming Languages:- Visual Basic, Python, SQL, C++, HTML, Java, Django.<br/>
+										   Operating Systems:- Windows, Linux, Mac, Unix. <br/>
+										   Database: - SQL Server, MS Access, Oracle, PostgreSQL, SQLite. <br/>
+										   Software:-VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word,Zoom. <br/>
 										   Version Control:- Git, GitHub, GitLab
 											
 									</header>
