--- a/elements.html
+++ b/elements.html
@@ -52,9 +52,9 @@
 									<center>**Introduction**</center></b>
 
 								
-									<p> Welcome to my<b> portfolio!</b> I am a passionate and results-driven <strong>Data Analyst and Software Developer</strong>.<br/>
-									with a strong foundation in transforming complex data into actionable insights and building innovative software solutions.</br>
-									With a blend of <strong>technical expertise and problem-solving skills</strong>, I specialize in data analysis, machine learning,</br>
+									<p> Welcome to my<b> portfolio!</b> I am a passionate and results-driven <strong>Data Analyst and Software Developer</strong>.
+									with a strong foundation in transforming complex data into actionable insights and building innovative software solutions.
+									With a blend of <strong>technical expertise and problem-solving skills</strong>, I specialize in data analysis, machine learning,
 									and full-stack development to empower organizations with data-driven decisions and scalable applications. </p>
 
 									This is <u> My Portfolio </u> and this is code: <code>for (;;) { ... }</code>.
@@ -79,16 +79,17 @@
 									</header>
 									<header>
 										<h2><u>Technical skills</u></h2>
-										<p>Programming Languages:- Visual Basic, Python, SQL, C++, HTML, Java, Django.<br/>
-										   Operating Systems:- Windows, Linux, Mac, Unix. <br/>
-										   Database: - SQL Server, MS Access, Oracle, PostgreSQL, SQLite. <br/>
-										   Software:-VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word,Zoom. <br/>
-										   Version Control:- Git, GitHub, GitLab
-										</p>						   	
+										<ul>
+											<li>Programming Languages:- Visual Basic, Python, SQL, C++, HTML, Java, Django.</li>
+											<li>Operating Systems:- Windows, Linux, Mac, Unix.</li>
+											<li>Database: - SQL Server, MS Access, Oracle, PostgreSQL, SQLite.</li>
+											<li> Software:-VStudio, Azure Data Studio, JCL, SQL Server, DB2, MSFrontPage/Teams,/Excel/Word,Zoom.</li>
+											<li>Version Control:- Git, GitHub, GitLab</li>
+										</ul>
 									</header>
 									<header>
 										<h2><u>RELEVANT EXPERIENCE </u></h2>
-										<p><b>Adexwunmite Technology</b>                   <align="right"> Remote </align> </br>
+										<p><b>Adexwunmite Technology</b>   <align="right"> Remote </align> <br>
 										 Data Analyst and Software Developer
 										</p>
 											
