--- a/elements.html
+++ b/elements.html
@@ -61,10 +61,12 @@
 									Finally, this is a <a href="#">link for my Projects work</a>.</p>
 									<hr />
 									<h2><u>RESEARCH INTEREST</u></h2>
-									*<h3>Artificial Intelligence</h3>
-									*<h3>Machine Learning</h3>
-									*<h3>Database Management</h3>
-									*<h3>Cybersecurity</h3>
+									<ul>
+									<li><h3>Artificial Intelligence</h3></li>
+									<li><h3>Machine Learning</h3></li>
+									<li><h3>Database Management</h3></li>
+									<li><h3>Cybersecurity</h3></li>
+									</ul>
 									<hr />
 									<header>
 										<h2><u>EDUCATION</u> </h2>
@@ -89,8 +91,9 @@
 									</header>
 									<header>
 										<h2><u>RELEVANT EXPERIENCE </u></h2>
-										<p><b>Adexwunmite Technology</b>   <align="right"> Remote </align> <br>
-										 Data Analyst and Software Developer
+										<p><b>Adexwunmite Technology</b> <br/>
+										<stong>Data Analyst and Software Developer ( 2020-Present )</stong> 
+										 
 										</p>
 											
 									</header>														
