--- a/elements.html
+++ b/elements.html
@@ -91,7 +91,7 @@
 									</header>
 									<header>
 										<h2><u>RELEVANT EXPERIENCE </u></h2>
-										<p><b>Adexwunmite Technology</b> </p> <br>
+										<p><b>Adexwunmite Technology</b> <br>
 										<strong> Data Analyst and Software Developer ( 2020-Present )</strong> 
 										</p>							
 									</header>														
