--- a/elements.html
+++ b/elements.html
@@ -62,10 +62,10 @@
 									<hr />
 									<h2><u>RESEARCH INTEREST</u></h2>
 									<ul>
-									<li><h3>Artificial Intelligence</h3></li>
-									<li><h3>Machine Learning</h3></li>
-									<li><h3>Database Management</h3></li>
-									<li><h3>Cybersecurity</h3></li>
+									<li><h4>Artificial Intelligence</h4></li>
+									<li><h4>Machine Learning</h4></li>
+									<li><h4>Database Management</h4></li>
+									<li><h4>Cybersecurity</h4></li>
 									</ul>
 									<hr />
 									<header>
@@ -91,10 +91,38 @@
 									</header>
 									<header>
 										<h2><u>RELEVANT EXPERIENCE </u></h2>
-										<p><b>Adexwunmite Technology</b> <br>
-										<strong> Data Analyst and Software Developer ( 2020-Present )</strong> 
-										</p>							
-									</header>														
+										<p><h4>Adexwunmite Technology</h4> <br>
+										 Data Analyst and Software Developer ( 2020-Present )
+										</p>
+										<ul>
+											<li>Designed and developed responsive web applications using React, HTML, CSS, and JavaScript to enhance user experience and engagement by 30%</li>
+											<li>Participated in cross-functional teams to implement methodologies of agile development and took part in sprint planning, code reviews, and daily stand-ups. </li>
+											<li>Integrated third-party APIs and designed RESTful web services to make data exchange smoother, enhancing the functionality of an application. </li>
+											<li>Participated in database design, including schema creation and optimization, for efficient data storage and retrieval. </li>
+											<li>building a full-stack web application using Django for back-end and JavaScript for the frontend, allowing users to create, update, and manage content seamlessly</li>
+											<li>Implemented database models and created API endpoints for user authentication and authorization, ensuring secure user data management. </li>
+											<li>Conducted a complex analysis on behalf of a diversified business unit on identification of Key Performance Indicators, trends, and decision drivers. </li>
+											<li>Designed interactive dashboards using Tableau and Power BI, providing real-time data visualizations and insights to senior management that improved decision speed by 25%</li>
+											<li>Conducted regression and correlation analyses among other statistical analyses to determine the factors that influence customer churn and sales trends. </li>
+											<li>Automated reports by using SQL saved over 30 hours of manual data extraction time by the team each month. </li>
+											<li>Data Preprocessing: Designed raw data cleaning and transformation in a proper structured dataset (using Python) with Pandas-Matplotlib; reduced analysis time by 25% directly. </li>
+										</ul>
+											<p><h4>Vsonet Groups</h4> <br>
+											Web developer and Software Developer Tutor ( March 2022-March 2023  )
+											</p>
+											<ul>
+												<li>Assisted in developing forecasting models using time-series analysis, improving sales predictions by 15%</li>
+												<li>Developed simple visualization tools using Excel and R to present findings to senior analysts and team leads. </li>
+												<li>Worked alongside senior developers to learn about cloud deploymen</li>
+												<li>Contributed to the testing process by writing unit tests and debugging issues, improving overall system stability. </li>
+												<li>Mentoring aspiring developers by conducting coding sessions, reviewing assignments, and providing feedback on project work.</li>
+												<li>Helping students understand front-end and back-end technologies, including HTML, CSS, JavaScript. </li>
+												<li>Enhanced the SEO of websites by applying best practices, resulting in a 15% increase in organic search traffic.			
+											</ul>
+									</header>	
+									<header>
+										
+									</header>
 								<!-- Lists -->
 									<h2>Lists</h2>
 									<div class="row">
