--- a/elements.html
+++ b/elements.html
@@ -70,7 +70,7 @@
 									<hr />
 									<header>
 										<h2><u>EDUCATION</u> </h2>
-										<p><b>Ekiti state university, Faculty of science</b></p>
+										<b>Ekiti state university, Faculty of science</b>
 										Bachelors of Science, Computer Science</br>
 										<p>Emphasis, Database model.</p>
 									</header>
@@ -99,7 +99,7 @@
 											<li>Participated in cross-functional teams to implement methodologies of agile development and took part in sprint planning, code reviews, and daily stand-ups. </li>
 											<li>Integrated third-party APIs and designed RESTful web services to make data exchange smoother, enhancing the functionality of an application. </li>
 											<li>Participated in database design, including schema creation and optimization, for efficient data storage and retrieval. </li>
-											<li>building a full-stack web application using Django for back-end and JavaScript for the frontend, allowing users to create, update, and manage content seamlessly</li>
+											<li>building a full-stack web application using Django for back-end and JavaScript for the frontend, allowing users to create, update, and manage content seamlessly</li>
 											<li>Implemented database models and created API endpoints for user authentication and authorization, ensuring secure user data management. </li>
 											<li>Conducted a complex analysis on behalf of a diversified business unit on identification of Key Performance Indicators, trends, and decision drivers. </li>
 											<li>Designed interactive dashboards using Tableau and Power BI, providing real-time data visualizations and insights to senior management that improved decision speed by 25%</li>
@@ -112,16 +112,32 @@
 											</p>
 											<ul>
 												<li>Assisted in developing forecasting models using time-series analysis, improving sales predictions by 15%</li>
-												<li>Developed simple visualization tools using Excel and R to present findings to senior analysts and team leads. </li>
+												<li>Developed simple visualization tools using Excel,Power bi and R to present findings to senior analysts and team leads. </li>
 												<li>Worked alongside senior developers to learn about cloud deploymen</li>
 												<li>Contributed to the testing process by writing unit tests and debugging issues, improving overall system stability. </li>
 												<li>Mentoring aspiring developers by conducting coding sessions, reviewing assignments, and providing feedback on project work.</li>
 												<li>Helping students understand front-end and back-end technologies, including HTML, CSS, JavaScript. </li>
 												<li>Enhanced the SEO of websites by applying best practices, resulting in a 15% increase in organic search traffic.			
+										</ul>
+											<p><h4>Ministry of Science and Technology</h4> <br>
+											Data analyst Internship and Software Developer Internship  ( august 2019- December 2019  )
+											</p>
+											<ul>
+												<li>Designed a train ticketing system with Vs code using V basic programming. </li>
+												<li>Created a database system for IT students using Sql and Microsoft access. </li>
+												<li>Developed and designed websites using CSS, html and JavaScript. </li>
+												<li>Developed and deployed machine learning models using TensorFlow for predictive analytics in the healthcare industry, leading to a 20% improvement in diagnostic accuracy. </li>
+												<li>Built an end-to-end machine learning pipeline in Python to automate the data collection, cleaning, training, and prediction processes. </li>
+												<li>Implemented deep learning architectures including CNNs and RNNs for image classification and time-series forecasting. </li>
+												
 											</ul>
 									</header>	
 									<header>
-										
+											<h2><u>PROJECT EXPERIENCE</u> </h2>
+											<ul>
+												<li>Served as a Core Team member and developed a Train Ticketing System to automate the payment of passengers from one location to another in Vbasic </li>
+												<li>Served as a Project team leader and developed an Objective and Subjective scoring system with HTML, CSS, Bootstrap, and JavaScript, the backend with PHP and MySQL using top down model</li>
+											</ul>
 									</header>
 								<!-- Lists -->
 									<h2>Lists</h2>
