--- a/elements.html
+++ b/elements.html
@@ -139,7 +139,7 @@
 												<li>Served as a Project team leader and developed an Objective and Subjective scoring system with HTML, CSS, Bootstrap, and JavaScript, the backend with PHP and MySQL using top down model</li>
 											</ul>
 									</header>
-								<!-- Lists -->
+								!<!-- Lists -->
 									<h2>Lists</h2>
 									<div class="row">
 										<div class="col-6 col-12-small">
@@ -170,7 +170,7 @@
 												<li>Felis enim feugiat magna.</li>
 												<li>Etiam vel felis nullam.</li>
 												<li>Felis enim et tempus.</li>
-											</ol>
+											</ol> !
 
 											<h3>Icons</h3>
 											<ul class="icons">
