--- a/elements.html
+++ b/elements.html
@@ -139,7 +139,7 @@
 												<li>Served as a Project team leader and developed an Objective and Subjective scoring system with HTML, CSS, Bootstrap, and JavaScript, the backend with PHP and MySQL using top down model</li>
 											</ul>
 									</header>
-								!<!-- Lists -->
+								<!-- Lists 
 									<h2>Lists</h2>
 									<div class="row">
 										<div class="col-6 col-12-small">
@@ -187,6 +187,7 @@
 												<li><a href="#" class="icon brands alt fa-github"><span class="label">Github</span></a></li>
 												<li><a href="#" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
 											</ul>
+								-->
 
 										</div>
 									</div>
