--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 									<a href="#" class="image fit"><img src="images/New3.png" alt="" /></a>
 									<p>Analysis raw data, then arranging and representing them on the table format using power bi analytic tool.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">view porject</a></li>
+										<li><a href="#" class="button">view project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -114,7 +114,7 @@
 										</a>and sort large datas</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Using pyrhon to work as a data analytic tools and creating softwares.</p>
+									<p>Using python to work as a data analytic tools and creating softwares.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View projects</a></li>
 									</ul>
