--- a/generic.html
+++ b/generic.html
@@ -56,9 +56,12 @@
 								<p><b>Objective:</b> An e-commerce web application is to be provided that will allow <br/>
 									users to browse the products, add items into the cart, and make secure payments.
 								</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. 
-								Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
-								PPellentesque leo mauris, consectetur id ipsum.</p>
+								<p> Technologies Used: HTML, CSS, JavaScript, React, Node.js, MongoDB, Stripe API for payment integration.</p>
+								<p>Key Tasks: Frontend: Provide a responsive UI with React for Design and Implementation.</p>
+								<p>Backend: Use Node.js/Express for building RESTful APIs that will manage user information, the product catalog, and transactions	</p>
+								<p>
+									
+								</p>
 							</section>
 
 					</div>
