--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/New1.png" alt="Data Cleaning" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">view project</a></li>
+									<li><a href="generic.html" class="button large">view project</a></li>
 								</ul>
 							</article>
 
@@ -80,7 +80,7 @@
 									<a href="#" class="image fit"><img src="images/New 2.png" alt=" visually and statistically summarizing, exploring" /></a>
 									<p>Data exploration of basketball teams in Sql server </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View project</a></li>
+										<li><a href="generic.html" class="button">View project</a></li>
 									</ul>
 								</article>
 								<article	>
@@ -92,7 +92,7 @@
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>This was a project which i developed during IT and it makes me have a full understanding about Visual basic</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">see project</a></li>
+										<li><a href="generic.html" class="button">see project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -104,7 +104,7 @@
 									<a href="#" class="image fit"><img src="images/New3.png" alt="" /></a>
 									<p>Analysis raw data, then arranging and representing them on the table format using power bi analytic tool.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">view project</a></li>
+										<li><a href="generic.html" class="button">view project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -116,7 +116,7 @@
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>Using python to work as a data analytic tools and creating softwares.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View projects</a></li>
+										<li><a href="generic.html" class="button">View projects</a></li>
 									</ul>
 								</article>
 								
